add bgm emotion no.47 image for replacing the external link icon.

--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -24,7 +24,7 @@
             <h3 class="bangumi-title">
                 {{bangumi.name_cn || '暂无'}}
                 <a class="external-link" [href]="'https://bgm.tv/subject/' + bangumi.bgm_id" target="_blank" title="在bgm.tv页面查看">
-                    <i class="external icon"></i>
+                    <i class="bgm-emo-47 bgm-link-icon"></i>
                 </a>
             </h3>
             <h4 class="entry">
