--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -19,7 +19,7 @@
                 {{bangumi.name_cn}}
                 <a class="external-link" [href]="'https://bgm.tv/subject/' + bangumi.bgm_id" target="_blank"
                    title="在bgm.tv页面查看">
-                    <i class="external icon"></i>
+                    <i class="bgm-emo-47 bgm-link-icon"></i>
                 </a>
                 <a *ngIf="user.level >= 2" class="external-link" title="编辑" [routerLink]="['/admin/bangumi/', bangumi.id]">
                     <i class="edit icon"></i>
