--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -36,7 +36,7 @@
             </a>
             <a class="external-link" [href]="'https://bgm.tv/subject/' + episode.bangumi.bgm_id" target="_blank"
                title="在bgm.tv页面查看">
-                <i class="external icon"></i>
+                <i class="bgm-emo-47 bgm-link-icon"></i>
             </a>
         </h2>
         <h4 class="bangumi-title name">{{episode.bangumi.name}}</h4>
