add auto play next overlay and settings

--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -8,8 +8,13 @@
                   [thumbnail]="episode.thumbnail"
                   [bangumiName]="episode.bangumi.name_cn || episode.bangumi.name"
                   [episodeNo]="episode.episode_no"
+                  [nextEpisodeId]="nextEpisode?.id"
+                  [nextEpisodeName]="nextEpisode?.name"
+                  [nextEpisodeNameCN]="nextEpisode?.name_cn"
+                  [nextEpisodeThumbnail]="nextEpisode?.thumbnail_image?.url"
                   (onProgress)="onWatchPositionUpdate($event)"
-                  (onDurationUpdate)="onDurationUpdate($event)"></video-player>
+                  (onDurationUpdate)="onDurationUpdate($event)"
+                  (onPlayNextEpisode)="onPlayNext($event)"></video-player>
 </div>
 <div class="ui container episode-info-container" *ngIf="episode">
 <h3 class=episode-title>
