--- a/src/app/video-player/controls/controls.html
+++ b/src/app/video-player/controls/controls.html
@@ -3,6 +3,9 @@
 </div>
 <div class="control-wrapper" (click)="onClickVideo($event)" #controlWrapper>
     <video-captured-frame-list [showControls]="showControls" (motion)="onMotion()"></video-captured-frame-list>
+    <next-episode-overlay *ngIf="hasNextEpisode && isPlayEnd"
+                          [hasNextEpisode]="hasNextEpisode"
+                          (onCancel)="onCancelNext()"></next-episode-overlay>
     <div class="control-bar" (click)="onControlBarClick($event)" [@controlBarState]="controlBarState">
         <video-player-scrub-bar (motion)="onMotion()" [showControls]="showControls"></video-player-scrub-bar>
         <div class="control-buttons">
