--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -36,7 +36,7 @@
 
   .brand {
     display: block;
-    padding: 0 1rem 0 0.5rem;
+    padding: 0 0.5rem 0 0.5rem;
     color: #101010;
   }
   .ui.static-search.input {
@@ -182,5 +182,12 @@
   }
   #page-footer .credits, #page-footer .copyright-content {
 
+  }
+}
+
+.christmas-tree {
+  > img {
+    width: auto;
+    height: 2rem;
   }
 }
