--- a/src/app/home/preview-video/preview-video.html
+++ b/src/app/home/preview-video/preview-video.html
@@ -1,6 +1,22 @@
 <div class="preview-video-container">
     <div class="theater-backdrop" (click)="focusVideoPlayer($event)">
         <video-player class="player-width player-height"
-                      [videoFile]="videoFile"></video-player>
+                      [videoFile]="videoFile"
+                      (onProgress)="onProgressUpdate($event)"></video-player>
+    </div>
+    <div class="pv-info-container" *ngIf="!!manifest">
+        <div class="current-pv" [@timing]="currentPVState">
+            <div class="bgm-image" *ngIf="!!currentPV.image">
+                <img [src]="currentPV.image" alt="">
+            </div>
+            <div class="info">
+                <h2 class="title" *ngIf="!!currentPV.name_cn"><a [href]="'https://bgm.tv/subject/' + currentPV.bgm_id">{{currentPV.name_cn}}</a></h2>
+                <h2 class="title" *ngIf="!currentPV.name_cn">{{currentPV.name}}</h2>
+                <h3 class="sub-title" *ngIf="!!currentPV.name_cn">{{currentPV.name}}</h3>
+                <div class="summary" [innerHTML]="currentPV.summary" *ngIf="!!currentPV.summary">
+                </div>
+                <div class="air-date">放松开始：{{currentPV.air_date}}</div>
+            </div>
+        </div>
     </div>
 </div>
