fix #105 replace image url to local image. remove some console.log

--- a/src/app/static-content/apps/apps.html
+++ b/src/app/static-content/apps/apps.html
@@ -3,4 +3,7 @@
     <p>
         <a href="https://play.google.com/store/apps/details?id=com.sqrtf.megumin">Megumin</a>
     </p>
+    <p>
+        <a href="https://play.google.com/store/apps/details?id=me.sunzheng.mana">Mana</a>
+    </p>
 </div>
