--- a/src/app/home/my-bangumi/my-bangumi.less
+++ b/src/app/home/my-bangumi/my-bangumi.less
@@ -20,9 +20,10 @@
 .menu.favorite-list {
   margin: .3em -1.14285714em 0;
   padding-top: 1rem;
-  > .item {
+  > .item.favorite-item {
     font-size: 1rem;
     padding: 0.5em 1.14em;
+    white-space: nowrap;
     > .bangumi-name {
       display: inline-block;
       width: 9em;
