fix bug in favorite-list template which will cause aot fail to compile

--- a/src/app/home/favorite-list/favorite-list.html
+++ b/src/app/home/favorite-list/favorite-list.html
@@ -34,7 +34,7 @@
             </infinite-list>
         </ui-timeline-meter>
     </div>
-    <div class="no-result-container" *ngIf="!isLoading && (!favorite || favoriteList.length === 0)">
+    <div class="no-result-container" *ngIf="!isLoading && (!favoriteList || favoriteList.length === 0)">
         <div class="no-result-tips"><i class="warning circle icon"></i>还没有内容</div>
     </div>
     <div class="loading-container" *ngIf="isLoading">
