--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -191,3 +191,13 @@
     height: 2rem;
   }
 }
+
+.new-year {
+  height: @navbarHeight;
+  line-height: @navbarHeight;
+  > img {
+    width: 87px;
+    height: 46px;
+    vertical-align: bottom;
+  }
+}
