--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -9,7 +9,7 @@
         <!--<img src="/assets/img/christmas-tree.svg" alt="">-->
     <!--</div>-->
     <div class="new-year">
-        <img src="/assets/img/newyear2018.png" alt="">
+        <img src="/assets/img/newyear2018.png" alt="" title="Happy New Year 2018!">
     </div>
     <div class="ui static-search small action input">
         <input type="text" placeholder="Search..." #staticSearch (keyup.enter)="searchBangumi(staticSearch.value)">
