--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -185,23 +185,23 @@
   }
 }
 
-.christmas-tree {
-  > img {
-    width: auto;
-    height: 2rem;
-  }
-}
-
-.new-year {
-  height: @navbarHeight;
-  line-height: @navbarHeight;
-  > img {
-    width: 87px;
-    height: 46px;
-    vertical-align: bottom;
-  }
-
-  @media (max-width: 320px) {
-    display: none;
-  }
-}
+//.christmas-tree {
+//  > img {
+//    width: auto;
+//    height: 2rem;
+//  }
+//}
+//
+//.new-year {
+//  height: @navbarHeight;
+//  line-height: @navbarHeight;
+//  > img {
+//    width: 87px;
+//    height: 46px;
+//    vertical-align: bottom;
+//  }
+//
+//  @media (max-width: 320px) {
+//    display: none;
+//  }
+//}
