--- a/src/app/home/my-bangumi/my-bangumi.less
+++ b/src/app/home/my-bangumi/my-bangumi.less
@@ -32,6 +32,11 @@
       text-overflow: ellipsis;
       white-space: nowrap;
     }
+    > .ui.label {
+      position: absolute;
+      top: 0.63em;
+      right: 1.14em;
+    }
   }
 }
 
