add multiple video_file support

--- a/src/app/admin/bangumi-detail/video-file-modal/video-file-modal.html
+++ b/src/app/admin/bangumi-detail/video-file-modal/video-file-modal.html
@@ -12,6 +12,30 @@
                 <label>id</label>
                 <input type="text" formControlName="id" readonly>
             </div>
+            <div class="two fields">
+                <div class="field">
+                    <label>file_name</label>
+                    <input type="text" formControlName="file_name">
+                </div>
+                <div class="field">
+                    <label>label</label>
+                    <input type="text" formControlName="label">
+                </div>
+            </div>
+            <div class="three fields">
+                <div class="field">
+                    <label>resolution_w</label>
+                    <input type="text" formControlName="resolution_w" readonly>
+                </div>
+                <div class="field">
+                    <label>resolution_h</label>
+                    <input type="text" formControlName="resolution_h" readonly>
+                </div>
+                <div class="field">
+                    <label>duration</label>
+                    <input type="text" formControlName="duration" readonly>
+                </div>
+            </div>
             <div class="field">
                 <label>download_url</label>
                 <input type="text" placeholder="magnet或torrent文件的url" formControlName="download_url">
