add extension support

--- a/src/app/home/bangumi-detail/bangumi-detail.less
+++ b/src/app/home/bangumi-detail/bangumi-detail.less
@@ -82,6 +82,16 @@
         content: "放送星期";
       }
     }
+    .rating {
+      &:before {
+        content: "Bangumi评分";
+      }
+    }
+    .my-review {
+      &:before {
+        content: "我的评价";
+      }
+    }
   }
 }
 
