--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -91,5 +91,9 @@
         </div>
     </div>
 </div>
-
+<div class="comment-section" *ngIf="!!episode">
+    <div class="ui container">
+        <bangumi-comment [bgmEpsId]="episode.bgm_eps_id"></bangumi-comment>
+    </div>
+</div>
 
