--- a/src/app/home/user-center/user-center.html
+++ b/src/app/home/user-center/user-center.html
@@ -2,6 +2,7 @@
     <div class="ui secondary pointing menu">
         <a routerLink="/settings/user" class="active item">用户设置</a>
         <a routerLink="/settings/web-hook" class="item">Web Hook列表</a>
+        <a routerLink="/settings/bangumi" class="item">Bangumi账户</a>
     </div>
     <div class="ui segment basic-info">
         <h4>基本信息</h4>
