--- a/src/app/home/web-hook/web-hook.html
+++ b/src/app/home/web-hook/web-hook.html
@@ -2,6 +2,7 @@
     <div class="ui secondary pointing menu">
         <a routerLink="/settings/user" class="item">用户设置</a>
         <a routerLink="/settings/web-hook" class="active item">Web Hook列表</a>
+        <a routerLink="/settings/bangumi" class="item">Bangumi账户</a>
     </div>
     <div class="ui segment">
         <h4>可用的Web Hook</h4>
