--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -29,6 +29,12 @@
                 <span class="tip">日文名:</span><span class="name-text">{{bangumi.name}}</span>
             </h3>
             <favorite-chooser [bangumi]="bangumi"></favorite-chooser>
+            <div class="my-review facade-item" *ngIf="!!userFavoriteInfo">
+                <my-review [rating]="userFavoriteInfo.rating" [comment]="userFavoriteInfo.comment" (editReview)="onEditReview()"></my-review>
+            </div>
+            <div class="rating facade-item" *ngIf="isExtraInfoEnabled && !!extraInfo">
+                <bangumi-rating [rating]="extraInfo.rating"></bangumi-rating>
+            </div>
             <div class="summary facade-item">
                 {{bangumi.summary}}
             </div>
