--- a/src/app/home/bangumi-detail/bangumi-detail.less
+++ b/src/app/home/bangumi-detail/bangumi-detail.less
@@ -72,14 +72,15 @@
       }
     }
 
-    .air-date {
-      &:before {
-        content: "放送开始";
+    .on-air-info {
+      .key {
+        color: #767676;
       }
-    }
-    .air-weekday {
+      .value {
+        padding: 0 2rem 0 0;
+      }
       &:before {
-        content: "放送星期";
+        content: "放送信息";
       }
     }
     .rating {
