--- a/src/app/home/favorite-chooser/favorite-chooser.less
+++ b/src/app/home/favorite-chooser/favorite-chooser.less
@@ -1,3 +1,7 @@
-.favorite-wrapper {
+favorite-chooser {
+  display: block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   margin-top: 1.8rem;
 }
