--- a/src/app/home/bangumi-account-binding/bangumi-account-binding.html
+++ b/src/app/home/bangumi-account-binding/bangumi-account-binding.html
@@ -15,7 +15,11 @@
                 <div class="username">@{{authInfo.username}}</div>
                 <a class="user-space-url" [href]="authInfo.url" target="_blank">{{authInfo.url}}</a>
                 <div class="actions">
-                    <button class="ui red button" type="button" (click)="revokeAuth()">取消关联</button>
+                    <button class="ui red button" type="button"
+                            confirmDialog
+                            dialogTitle="确定取消关联吗？"
+                            dialogContent="您可以随时重新关联您的bangumi帐号"
+                            (onConfirm)="revokeAuth()">取消关联</button>
                 </div>
             </div>
         </div>
@@ -23,11 +27,11 @@
             <form class="auth-form ui form" [formGroup]="authForm" novalidate (submit)="login($event)">
                 <div class="field">
                     <label>Bangumi邮箱</label>
-                    <input type="text" placeholder="Bangumi的注册邮箱" formControlName="username">
+                    <input type="text" placeholder="Bangumi的注册邮箱" formControlName="username" autocomplete="new-username">
                 </div>
                 <div class="field">
                     <label>Bangumi密码</label>
-                    <input type="password" placeholder="Bangumi的密码" formControlName="password">
+                    <input type="password" placeholder="Bangumi的密码" formControlName="password" autocomplete="new-password">
                 </div>
                 <div class="footer">
                     <button class="ui primary button" type="submit">登录</button>
