--- a/src/app/home/rating/edit-review-dialog/edit-review-dialog.less
+++ b/src/app/home/rating/edit-review-dialog/edit-review-dialog.less
@@ -9,7 +9,7 @@
     width: 700px;
   }
   @media(min-height: 500px) {
-    height: 470px;
+    height: 490px;
   }
   @media(max-height: 499px) {
     height: 90%;
@@ -23,6 +23,7 @@
   border-radius: 4px;
   background-color: #fff;
   overflow: hidden;
+  padding-top: 4rem;
 }
 
 .action-bar {
@@ -63,7 +64,6 @@
   justify-content: flex-start;
   align-items: flex-start;
   position: relative;
-  padding-top: 4rem;
   .bangumi-info {
     width: 30%;
     padding: 1rem;
@@ -74,6 +74,10 @@
         width: 100%;
         height: auto;
       }
+    }
+    .bangumi-name-cn {
+      font-size: 1.2rem;
+      margin-top: 0.8rem;
     }
   }
   form.ui.form {
