--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -7,10 +7,11 @@
             <responsive-image [src]="bangumi.cover_image.url"
                               [size]="{
                                 width: '100%',
-                                height: 'auto',
+                                ratio: bangumi.cover_image.height / bangumi.cover_image.width,
                                 originalWidth: bangumi.cover_image.width,
                                 originalHeight: bangumi.cover_image.height}"
                               [background]="bangumi.cover_image.dominant_color"></responsive-image>
+            <bangumi-staff-info *ngIf="!!extraInfo" [staffList]="extraInfo.staff"></bangumi-staff-info>
         </div>
         <div class="bangumi-cover-revealer" [style.height]="coverRevealerHeight" (click)="toggleCover()">
         </div>
@@ -28,10 +29,7 @@
             <h3 class="bangumi-title name">
                 <span class="tip">日文名:</span><span class="name-text">{{bangumi.name}}</span>
             </h3>
-            <favorite-chooser [bangumi]="bangumi"></favorite-chooser>
-            <div class="my-review facade-item" *ngIf="!!userFavoriteInfo">
-                <my-review [rating]="userFavoriteInfo.rating" [comment]="userFavoriteInfo.comment" (editReview)="onEditReview()"></my-review>
-            </div>
+            <favorite-chooser [bangumi]="bangumi" [loadBgmInfo]="true"></favorite-chooser>
             <div class="rating facade-item" *ngIf="isExtraInfoEnabled && !!extraInfo">
                 <bangumi-rating [rating]="extraInfo.rating"></bangumi-rating>
             </div>
@@ -44,6 +42,7 @@
                 <span class="key">放送星期：</span>
                 <span class="value">{{bangumi.air_weekday | weekday}}</span>
             </div>
+            <bangumi-character *ngIf="!!extraInfo" [bangumi]="bangumi" [characterList]="extraInfo.crt"></bangumi-character>
         </div>
     </div>
     <div class="episode-list">
