--- a/src/app/home/rating/edit-review-dialog/edit-review-dialog.html
+++ b/src/app/home/rating/edit-review-dialog/edit-review-dialog.html
@@ -13,8 +13,28 @@
                                 originalWidth: bangumi.cover_image.width,
                                 originalHeight: bangumi.cover_image.height}"
                           [background]="bangumi.cover_image.dominant_color"></responsive-image>
+        <div class="bangumi-name-cn" *ngIf="bangumi.name_cn">{{bangumi.name_cn}}</div>
     </div>
     <form class="ui form" [formGroup]="reviewForm" (submit)="onSubmit($event)">
+        <div class="field">
+            <div class="small ui basic buttons">
+                <button class="ui button" [ngClass]="{active: favorite_status === 1}" (click)="chooseFavoriteStatus(1)">
+                    想看
+                </button>
+                <button class="ui button" [ngClass]="{active: favorite_status === 2}" (click)="chooseFavoriteStatus(2)">
+                    看过
+                </button>
+                <button class="ui button" [ngClass]="{active: favorite_status === 3}" (click)="chooseFavoriteStatus(3)">
+                    在看
+                </button>
+                <button class="ui button" [ngClass]="{active: favorite_status === 4}" (click)="chooseFavoriteStatus(4)">
+                    搁置
+                </button>
+                <button class="ui button" [ngClass]="{active: favorite_status === 5}" (click)="chooseFavoriteStatus(5)">
+                    抛弃
+                </button>
+            </div>
+        </div>
         <div class="field">
             <textarea name="comment" cols="20" rows="10"
                       formControlName="comment"
@@ -36,9 +56,10 @@
                 <span class="warning-tip" *ngIf="isHovering && hoverScore === 10">(请谨慎评价)</span>
             </div>
         </div>
+        <div>isHovering: {{isHovering}}</div>
         <div class="footer">
             <button class="ui button" type="button" (click)="cancel()">取消</button>
-            <button class="ui primary button" type="button" (click)="save()" [disabled]="reviewForm.invalid">提交</button>
+            <button class="ui primary button" type="button" (click)="save()" [disabled]="reviewForm.invalid || !favorite_status">提交</button>
         </div>
     </form>
 </div>
