--- a/src/app/static-content/privacy/privacy.html
+++ b/src/app/static-content/privacy/privacy.html
@@ -10,7 +10,7 @@
             此外本站还会自动保存您的观看记录和进度。
         </li>
         <li>
-            所有这些信息收集政策都尽显Web客户端，如果您使用的是第三方客户端，您需要检查第三方客户端的信息收集政策。
+            所有这些信息收集政策都仅限Web客户端，如果您使用的是第三方客户端，您需要检查第三方客户端的信息收集政策。
         </li>
     </ol>
     <h1 class="ui header">我们分享的信息</h1>
