--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -23,7 +23,7 @@
             <div class="text">{{currentVideoFile.label || currentVideoFile.file_name}}</div>
             <i class="dropdown icon"></i>
             <div class="menu">
-                <div class="item" *ngFor="let videoFile of episode.video_files" (click)="onVideoFileChnage(videoFile)">{{videoFile.label || videoFile.file_name}}</div>
+                <div class="item" *ngFor="let videoFile of episode.video_files" (click)="onVideoFileChange(videoFile)">{{videoFile.label || videoFile.file_name}}</div>
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
         <a class="ui label"
            *ngFor="let videoFile of episode.video_files"
            [ngClass]="{'blue': videoFile.id === currentVideoFile.id}"
-           (click)="onVideoFileChnage(videoFile)">
+           (click)="onVideoFileChange(videoFile)">
             {{videoFile.label || videoFile.file_name}}
         </a>
     </div>
