add missing user-action input binding.

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -18,7 +18,7 @@
     </button>
     </div>
     <div class="right-area">
-        <user-action></user-action>
+        <user-action [user]="user"></user-action>
         <a class="search-toggle-button" (click)="toggleFloatSearchFrame()">
             <i class="search icon"></i>
         </a>
