add feedback, hide chrome extension tip

--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -39,11 +39,21 @@
   margin-top: 2rem;
 
   .episode-title {
+    display: inline-block;
+    margin-bottom: 0;
     .episode-name-cn {
       padding-left: 1em;
       font-size: 0.8em;
       color: lighten(#000, 50%);
     }
+  }
+
+  .feedback-button {
+    display: inline-block;
+    margin-left: 2rem;
+    padding: 0.3rem 0.5rem;
+    cursor: pointer;
+    color: #606060;
   }
 
   .bangumi-info {
