--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -43,6 +43,7 @@
         <span class="episode-no">{{episode.episode_no}}</span>
         <span class="episode-name-cn">{{episode.name_cn}}</span>
     </h3>
+    <a class="feedback-button" (click)="feedback()" title="报告错误"><i class="icon flag"></i></a>
     <div class="ui divider">
     </div>
     <div class="bangumi-info">
