--- a/src/app/home/favorite-chooser/favorite-chooser.less
+++ b/src/app/home/favorite-chooser/favorite-chooser.less
@@ -5,7 +5,6 @@ favorite-chooser {
   box-sizing: border-box;
   margin-top: 1.8rem;
 
-
   .facade-item {
     margin-top: 2.8rem;
     padding-top: 0.6rem;
@@ -24,6 +23,12 @@ favorite-chooser {
     &:before {
       content: "我的评价";
     }
+  }
+
+  .sync-disabled-tip {
+    display: inline-block;
+    margin-left: 1rem;
+    color: #da9003
   }
 
   .sync-complete-tip {
