- fix bug in favorite-chooser, some operation may occasionally make EditReviewDialog got stuck. Solve this issue by replace applicationRef.tick() to ngZone.run(). Currently not know why. - Add a box shadow in feedback dialog. - Move synchronize invoke out of EditReviewDialog. - After update favorite, a get favorite request will be sent.

--- a/src/app/home/play-episode/feedback/feedback.less
+++ b/src/app/home/play-episode/feedback/feedback.less
@@ -23,6 +23,9 @@
   border-radius: 4px;
   background-color: #fff;
   overflow: hidden;
+  -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
 }
 
 .ui.form {
