--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -41,7 +41,7 @@
   .episode-title {
     display: inline-block;
     margin-bottom: 0;
-    .episode-name-cn {
+    .episode-name {
       padding-left: 1em;
       font-size: 0.8em;
       color: lighten(#000, 50%);
