add character info in play episode

--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -72,6 +72,7 @@
             <div class="summary">
                 {{episode.bangumi.summary}}
             </div>
+            <reveal-extra [bangumi]="episode.bangumi"></reveal-extra>
             <h4>
                 各话列表
             </h4>
