--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -41,8 +41,7 @@
     <h3 class=episode-title>
         <span class="bangumi-name">{{episode.bangumi.name_cn}}</span>
         <span class="episode-no">{{episode.episode_no}}</span>
-        <span class="episode-name" *ngIf="!!episode.name_cn && !episode.name">{{episode.name_cn}}</span>
-        <span class="episode-name" *ngIf="!!episode.name && !episode.name_cn">{{episode.name}}</span>
+        <span class="episode-name" *ngIf="!!episode.name_cn || !!episode.name">{{episode.name_cn || episode.name}}</span>
     </h3>
     <a class="feedback-button" (click)="feedback()" title="报告错误"><i class="icon flag"></i></a>
     <div class="ui divider">
